# Shpeeglesonic

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/audio/: decoder.rs  engine.rs  fft.rs  metadata.rs  mod.rs  output.rs  resampler.rs
src-tauri/src/lyrics/: lrclib.rs
src-tauri/tests/fixtures/: tone-alac.m4a  tone.aiff
src/components/: ConfirmDialog.tsx  Icons.tsx
src/components/Layout/: BottomBar.tsx  Sidebar.tsx  TopNav.tsx
src/components/Lyrics/: LyricsPanel.tsx
src/components/Player/: AlbumArt.tsx  ArtLightbox.tsx  Controls.tsx  FormatBadge.tsx  NowPlaying.tsx  ProgressBar.tsx  VolumeSlider.tsx
src/components/Playlist/: PlaylistContextMenu.tsx  PlaylistSidebar.tsx  PlaylistView.tsx
src/components/Queue/: QueuePanel.tsx  QueueSidebar.tsx
src/components/Settings/: SettingsPanel.tsx
src/components/Visualizer/: BangerDetector.tsx  Buddhabrot.tsx  CombinedVisualizer.tsx  MandelbrotGL.tsx  MusicNotes.tsx  PaintSplash.tsx  RadialSpiral.tsx  RotatingSpiral.tsx  Spectrogram.tsx  StereoScope.tsx  VisualizerContainer.tsx  VisualizerQuickSettings.tsx  VisualizerView.tsx  visualizerUtils.ts
src/hooks/: useAudioPlayer.ts  useFFTData.ts  useKeyboardShortcuts.ts  useLibrary.ts  usePlaylist.ts  usePlaylistGrouping.ts
src/stores/: playerStore.ts
src/styles/: globals.css
src/utils/: formatters.ts
