[package]
name = "shpeeglesonic"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "shpeeglesonic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
cpal = "0.17.3"
rubato = "1.0.1"
ringbuf = "0.4.8"
crossbeam-channel = "0.5.15"
symphonia = { version = "0.5.5", features = ["mp3", "flac", "wav", "pcm", "aac", "vorbis", "isomp4"] }
audioadapter-buffers = "2.0.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
lofty = "0.23.2"
rustfft = "6.4.1"
notify = "8.2.0"
base64 = "0.22.1"
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.50.0", features = ["full"] }
dirs = "6.0.0"

